--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,9 @@ a {
   padding-top: 45px;
   margin-right: 69px;
 }
-
+.foter-contacts {
+  margin-top: 9px;
+}
 .join-content {
   padding-top: 57px;
 }
