--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --text-color: #757575;
+  --main-text-color: #212121;
+  --white-title-color: #ffffff;
+  --link-focus-color: #2196f3;
+}
 html {
   box-sizing: border-box;
 }
@@ -7,12 +13,16 @@ html {
   box-sizing: inherit;
 }
 body {
-  --text-color: #757575;
-  --main-text-color: #212121;
-  --white-title-color: #ffffff;
-  --link-focus-color: #2196f3;
   font-style: normal;
   font-family: 'Roboto', sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
+h1,
+h2,
+h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .conteiner {
   width: 1200px;
@@ -51,7 +61,7 @@ body {
 .nav-contacts-menu {
   display: flex;
 }
-.nav-main {
+.nav-button-conteiner {
   margin-right: auto;
 }
 
@@ -68,6 +78,7 @@ a {
 .list {
   list-style: none;
   padding: 0px;
+  margin: 0px;
 }
 .list-item {
   font-style: normal;
@@ -93,6 +104,8 @@ a {
   color: var(--link-focus-color);
 }
 .main-section {
+  padding-top: 200px;
+  padding-bottom: 200px;
   background: rgba(47, 48, 58, 0.8);
   text-align: center;
 }
@@ -102,17 +115,14 @@ a {
   line-height: 60px;
   text-transform: uppercase;
   letter-spacing: 0.06em;
-  padding-top: 200px;
   padding-left: 237px;
   padding-right: 237px;
   margin: 0;
-
   color: var(--white-title-color);
 }
 .primary-button {
-  padding-top: 30px;
-  padding-bottom: 200px;
-  margin: 0;
+  margin-top: 30px;
+  margin-bottom: 0px;
 }
 .main-button-link {
   font-weight: bold;
@@ -128,49 +138,54 @@ a {
 .main-button-link:focus {
   background-color: var(--link-focus-color);
 }
+.first-section {
+  padding-top: 94px;
+}
 .second-section {
-  margin-top: 94px;
-  padding: 0;
   display: flex;
 }
+.second-section-item {
+  width: 270px;
+}
 .second-section-item:not(:last-child) {
-  padding-right: 30px;
+  margin-right: 30px;
 }
 .description-title {
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   text-transform: uppercase;
-  padding-top: 30px;
-  margin: 0;
+  margin-top: 30px;
+  margin-bottom: 0px;
   color: var(--main-text-color);
 }
 .description-text {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  padding-top: 10px;
-  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 0px;
   color: var(--text-color);
 }
 .experience-section {
-  margin-top: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .experience-list {
-  padding: 0;
-  margin-top: 50px;
   display: flex;
+}
+.experience-item {
+  width: 370px;
 }
 .experience-item:not(:last-child) {
   margin-right: 30px;
 }
-.main-menu-title {
+.second-site-title {
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
   text-align: center;
-  padding-top: 94px;
-  margin-top: 0;
+  margin-bottom: 50px;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
@@ -186,17 +201,15 @@ a {
   background: rgba(47, 48, 58, 0.8);
 }
 .our-team-section {
-  margin-top: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
   background: #f5f4fa;
 }
 .team-list {
-  margin-top: 50px;
-  margin-bottom: 0px;
-  padding: 0;
-  padding-bottom: 94px;
   display: flex;
 }
 .team-card {
+  width: 270px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
@@ -219,34 +232,35 @@ a {
   line-height: 19px;
   text-align: center;
   margin-top: 10px;
+  margin-bottom: 0px;
   color: var(--text-color);
 }
 .network-list {
   margin-top: 16px;
   padding: 0;
-  margin-left: 32px;
-  margin-right: 32px;
+  justify-content: center;
+  margin-bottom: 24px;
   display: flex;
 }
+
 .network-item:not(:last-child) {
   margin-right: 10px;
 }
+.client-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .client-list {
-  margin-top: 50px;
   display: flex;
+}
+.client-item {
+  width: 170px;
 }
 .client-item:not(:last-child) {
   margin-right: 30px;
 }
-.footer-nav {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 24px;
-  color: rgba(255, 255, 255, 0.6);
-}
 
 .footer-content {
-  margin-top: 94px;
   background-color: #2f303a;
 }
 .footer-logo {
@@ -260,50 +274,71 @@ a {
 .social-content {
   display: flex;
 }
+.site-address {
+  margin-top: 8px;
+}
+
 .address-content {
+  width: 231px;
   padding-top: 45px;
   margin-right: 69px;
-}
-.foter-contacts {
-  margin-top: 9px;
-}
-.join-content {
-  padding-top: 57px;
-}
-.join-list {
-  padding-top: 23px;
-  display: flex;
-}
-.social-item:not(:last-child) {
-  margin-right: 10px;
 }
 .address {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   font-style: normal;
+
   color: var(--white-title-color);
 }
+.footer-nav {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-contacts {
+  margin-top: 9px;
+}
+.join-content {
+  width: 206px;
+  padding-top: 57px;
+}
+.join-list {
+  display: flex;
+}
+.social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .footer-title {
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   text-transform: uppercase;
+  margin-bottom: 20px;
   color: var(--white-title-color);
+}
+.site-development {
+  padding-top: 18px;
+  padding-bottom: 24px;
 }
 .developed {
   font-weight: normal;
   font-size: 12px;
   line-height: 24px;
   text-align: center;
+  margin: 0px;
   color: rgba(255, 255, 255, 0.4);
 }
-
+.portfolio-main-page {
+  padding-top: 93px;
+  padding-bottom: 94px;
+}
 .invisible-title {
   display: none;
 }
 .interactive-menu {
-  margin-top: 93px;
   justify-content: center;
   display: flex;
 }
@@ -339,6 +374,9 @@ a {
 }
 .portfolio-menu-item:nth-child(3n) {
   margin-right: 0px;
+}
+.portfolio-menu-item:nth-child(n + 7) {
+  margin-bottom: 0px;
 }
 .project {
   font-weight: bold;
